[package]
name = "cloudwatch_handler"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-cloudwatch = { version = "^1.100", default-features = false, features = ["rt-tokio"] }
aws-sdk-cloudwatchlogs = { version = "^1.113", default-features = false, features = ["rt-tokio"] }
metrics = { version = "^0.24", default-features = false}
sentry = { version = "^0.46", default-features = false }
tokio = { version = "^1.48", default-features = false, features = ["macros"]}
parking_lot = { version = "^0.12", default-features = false}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
